[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/FallingPlatform.gd" type="Script" id=1]
[ext_resource path="res://sprites/plataforma cai.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65.1934, 29.3916 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.2656, 3.59445 )

[node name="FallingPlatform" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2DPlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPlayerDetection"]
position = Vector2( 0, -34.6736 )
shape = SubResource( 2 )

[node name="TimerToFall" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="Area2DPlayerDetection" to="." method="_on_Area2DPlayerDetection_body_entered"]
[connection signal="timeout" from="TimerToFall" to="." method="_on_TimerToFall_timeout"]
